--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".GithubRepoApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/github_octocat"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/github_octocat"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GithubRepositories"
+        android:theme="@style/Theme.GithubRepo"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".main.GithubRepoActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.GithubRepositories">
+            android:theme="@style/Theme.GithubRepo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
